k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flask-to-mysql
  namespace: flask-project
spec:
  podSelector:
    matchLabels:
      app:  mysql     # who are we protecting?
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: flaskapp-pod    # who is allowed in?
      ports:
        - port: 3306       # on which port?
